# Counter_Strike_Market_Model

./: .env.example  .gitignore  README.md  SECURITY.md  STARTUP_PLAN.md  SUBMISSION_CHECKLIST.md  pyproject.toml
Reviews and implementation plans/: analysis_results.md  implementation_plan.md  todo_before_proceeding.md
configs/: backtest.yaml  fees.yaml  market_events.yaml  universe_day3_first_pull.yaml  universe_gun_skins_candidate.yaml  universe_mvp.yaml  universe_mvp_v2.yaml  venues.yaml
docs/: REPRODUCE.md  csfloat_api_coverage.md  final_research_report.md  final_submission_report.md  steamdt_kline_schema.md
notebooks/: 01_day17_rejection_diagnostics.ipynb  02_feature_distributions.ipynb  03_model_error_analysis.ipynb  04_regime_visualization.ipynb
src/cs_market_model/: __init__.py  audit_csfloat_sample.py  audit_steamdt_sample.py  config.py
src/cs_market_model/backtesting/: __init__.py  audit_outliers.py  execution.py  metrics.py  portfolio.py  rejection.py  rejection_policy.py  walk_forward.py  walk_forward_rejection.py
src/cs_market_model/collectors/: __init__.py  csfloat.py  csfloat_batch.py  steamdt.py  steamdt_batch.py
src/cs_market_model/dashboard/: app.py
src/cs_market_model/features/: __init__.py  build_features.py  csfloat_listings.py  events.py  indices.py  liquidity.py  market_index.py  momentum.py  ranks.py  volatility.py
src/cs_market_model/labeling/: __init__.py  build_labels.py  cusum.py  sensitivity.py  triple_barrier.py
src/cs_market_model/models/: __init__.py  baselines.py  calibrate.py  explain.py  lightgbm_train.py  train.py
src/cs_market_model/normalization/: __init__.py  items.py  order_books.py  prices.py
src/cs_market_model/pipeline/: __init__.py  artifact_manifest.py  run_all.py
src/cs_market_model/research/: __init__.py  day17_diagnostics.py  day18_csfloat_ablation.py  day19_csfloat_coverage.py  day19_universe_expansion.py  day21_v2_robustness.py  day22_low_price_policy.py  day23_policy_attribution.py  day24_capacity_sensitivity.py  day25_paper_trade_rejection.py  model_health_monitor.py  paper_trade_ab_test.py
src/cs_market_model/security/: __init__.py  env.py  scan_secrets.py
tests/: test_artifact_manifest.py  test_baseline_models.py  test_calibration.py  test_csfloat_batch.py  test_csfloat_listings.py  test_dashboard_app.py  test_day17_diagnostics.py  test_day18_csfloat_ablation.py  test_day19_csfloat_coverage.py  test_day19_universe_expansion.py  test_day21_v2_robustness.py  test_day22_low_price_policy.py  test_day23_policy_attribution.py  test_day24_capacity_sensitivity.py  test_day25_paper_trade_rejection.py  test_event_features.py  test_explain.py  test_features.py  test_item_metadata.py  test_labeling.py  test_lightgbm_train.py  test_market_index.py  test_model_health_monitor.py  test_order_books.py  test_outlier_audit.py  test_paper_trade_ab_test.py  test_portfolio_backtest.py  test_price_normalization.py  test_project_skeleton.py  test_rejection.py  test_run_all.py  test_steamdt_batch.py  test_walk_forward.py  test_walk_forward_rejection.py
