[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "cs-market-model"
version = "0.1.0"
description = "Net-return-aware Counter-Strike skin market buy-signal research MVP."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "joblib>=1.4",
  "lightgbm>=4.3",
  "numpy>=1.26",
  "pandas>=2.2",
  "pyarrow>=15.0",
  "pydantic>=2.7",
  "python-dotenv>=1.0",
  "pyyaml>=6.0",
  "requests>=2.32",
  "scikit-learn>=1.5",
  "streamlit>=1.35",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.4",
]

[project.scripts]
csmm-steamdt-probe = "cs_market_model.collectors.steamdt:main"
csmm-steamdt-batch = "cs_market_model.collectors.steamdt_batch:main"
csmm-csfloat-probe = "cs_market_model.collectors.csfloat:main"
csmm-csfloat-batch = "cs_market_model.collectors.csfloat_batch:main"
csmm-build-features = "cs_market_model.features.build_features:main"
csmm-build-csfloat-features = "cs_market_model.features.csfloat_listings:main"
csmm-build-labels = "cs_market_model.labeling.build_labels:main"
csmm-label-sensitivity = "cs_market_model.labeling.sensitivity:main"
csmm-train-baselines = "cs_market_model.models.train:main"
csmm-train-lightgbm = "cs_market_model.models.lightgbm_train:main"
csmm-run-backtest = "cs_market_model.backtesting.portfolio:main"
csmm-audit-outliers = "cs_market_model.backtesting.audit_outliers:main"
csmm-rejection-analysis = "cs_market_model.backtesting.rejection:main"
csmm-walk-forward-rejection = "cs_market_model.backtesting.walk_forward_rejection:main"
csmm-day17-diagnostics = "cs_market_model.research.day17_diagnostics:main"
csmm-day18-csfloat-ablation = "cs_market_model.research.day18_csfloat_ablation:main"
csmm-day19-csfloat-coverage = "cs_market_model.research.day19_csfloat_coverage:main"
csmm-day19-universe-expansion = "cs_market_model.research.day19_universe_expansion:main"
csmm-day21-v2-robustness = "cs_market_model.research.day21_v2_robustness:main"
csmm-day22-low-price-policy = "cs_market_model.research.day22_low_price_policy:main"
csmm-day23-policy-attribution = "cs_market_model.research.day23_policy_attribution:main"
csmm-scan-secrets = "cs_market_model.security.scan_secrets:main"

[tool.hatch.build.targets.wheel]
packages = ["src/cs_market_model"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
